<resources>
    <string name="app_name">6120-Hjemmeeksamen</string>
    <string name="title_activity_main"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Innstillinger</string>
    <string name="title_activity_settings"></string>
    <string name="action_search"></string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrerValgfri">Har du ikke bil trenger du ikke fylle ut de to siste*</string>
    <string name="epost">Epost</string>
    <string name="passord">Passord</string>
    <string name="navn"><![CDATA[Fornavn & Etternavn]]></string>
    <string name="tlf">Telefonnummer</string>
    <string name="bilmerke">Bilmerke</string>
    <string name="rsmodell">Årsmodell</string>
    <string name="registrer">Registrer</string>
    <string name="dashboard">Dashboard</string>
    <string name="mine_turer">Mine turer</string>
    <string name="se_turer">Se turer</string>
    <string name="opprett_ny_tur">Opprett ny tur</string>
    <string name="faste_turer">Faste turer</string>
    <string name="logg_ut">Logg ut</string>
    <string name="velg_m_l">Velg mål</string>
    <string name="fast_avreisem_l">Fast avreisemål</string>
    <string name="velg_tid">Velg tid</string>
    <string name="fast_avreisetidspunkt">Fast avreisetidspunkt</string>
    <string name="velg_sted">Velg sted</string>
    <string name="fast_avreisested">Fast avreisested</string>
    <string name="lagre_min_faste_informasjon">Lagre min faste informasjon</string>
</resources>
