<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="50dp"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".SettingsFragment">


    <EditText
        android:id="@+id/husksted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fast_avreisested"
        android:textSize="22sp" />


    <EditText
        android:id="@+id/huskTidspunkt"
        android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:hint="@string/fast_avreisetidspunkt"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/huskMaal"
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fast_avreisem_l"
        android:textSize="22sp" />

    <Button
        android:id="@+id/lagre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/lagre_min_faste_informasjon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/glem_meg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:text="@string/logg_ut"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp" />

    </LinearLayout>

</LinearLayout>